refactor: turing machine binary conversion refactoring